change to laravel prompt and fix testging

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "ShreifElagamy\\LaravelServices\\Providers\\LaravelServicesProvider"
+                "\\ShreifElagamy\\LaravelServices\\Providers\\LaravelServicesProvider"
             ]
         }
     },
