--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "Generate Service Module",
     "type": "library",
     "require": {
-        "laravel/framework": "^11"
+        "laravel/framework": "^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^9.2"
+        "orchestra/testbench": "^8.0|^9.0"
     },
     "license": "MIT",
     "autoload": {
@@ -32,5 +32,10 @@
             "email": "shre.if.ashr.af@hotmail.com"
         }
     ],
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test:l10": "composer update laravel/framework:^10.0 orchestra/testbench:^8.0 --with-all-dependencies && vendor/bin/phpunit",
+        "test:l11": "composer update laravel/framework:^11.0 orchestra/testbench:^9.0 --with-all-dependencies && vendor/bin/phpunit"
+    },
     "minimum-stability": "stable"
 }
