--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Generate modular service architecture for Laravel applications",
     "type": "library",
     "require": {
-        "laravel/framework": "^10.0|^11.0"
+        "laravel/framework": "^10.0|^11.0",
+        "spatie/laravel-data": "^4.10"
     },
     "require-dev": {
         "orchestra/testbench": "^8.0|^9.0"
